@@ -1,7 +1,7 @@
 import React from 'react';
-import {Link} from 'react-router-dom';
+// import {Link} from 'react-router-dom';
 // import GalleryData from '../dummy-data';
-import fire, {auth, provider} from '../../fire.js'
+import fire from '../../fire.js'
 // import UniqueNewsItem from '../unique-news-item/unique-news-item';
 
 // import FetchRandomImage from '../../news-page/news-page'
