@@ -1,10 +1,15 @@
 import React from 'react';
-import {Route, Redirect, Switch} from 'react-router-dom';
+import {
+  // Route
+  Redirect, Switch} from 'react-router-dom';
 
 import fire, {auth, provider} from '../fire.js'
 
-import './form.css';
+import FormView from './form-view.js';
 
+// import GetTodaysDate from '../utility_components/todaysDate.js';
+
+import './form.css';
 
 export class PracticeForm extends React.Component{
 
@@ -12,11 +17,13 @@ export class PracticeForm extends React.Component{
         super(props);
         this.state = {
             author: '',
+            email:'',
             // articleID: '',
             title: '',
             // id: '',
             text: '',
             articlesArray: [],
+            postdate: '',
             redirectToReferrer: false,
             user: null,
             viewForm: true
@@ -25,70 +32,79 @@ export class PracticeForm extends React.Component{
         this.handleSubmit = this.handleSubmit.bind(this);
         this.login = this.login.bind(this);
         this.logout = this.logout.bind(this);
+        
     }   
 
 
     componentDidMount(){
-      const dbRef = fire.database().ref("items");
-      console.log(dbRef);
-
-
-
+      const dbRef = fire.database().ref("items");   
+            
       dbRef.on('value', (snapshot) => {
         let dbObjects = snapshot.val();
         let tempState = [];
         for (let dbObject in dbObjects){
           tempState.push({
-            author: dbObjects[dbObject].author
+            author: dbObjects[dbObject].author,
+            email:dbObjects[dbObject].email,
+           
           })
         }
         this.setState({
           articlesArray: tempState
         })
-        console.log(((this.state.articlesArray).length) + 1)
+        // console.log(((this.state.articlesArray).length) + 1)
 
 
+        // Check if User is Logged In...
+        const checkUser = fire.auth().currentUser;
 
+        // If they Exist Check to see if they have already created article
+        if(checkUser){
+          console.log("Logged In")
 
-        // console.log("User Email Is: " + this.state.user.email)
+        const checkDBRef = this.state.articlesArray;
 
-        // const checkDBRef = this.state.articlesArray;
+        const currentUserEmail =  this.state.user.email;
+        console.log(currentUserEmail);
 
-        // // console.log("User Email Is: " + this.state.user.email)
-        // console.log("Check Database: " + checkDBRef);
-        // checkDBRef.map((test) => {
-        //   console.log(test.author);
-        //   if(test.author === "Avril Ducarne"){
+        checkDBRef.map((test) => {
+
+          if(test.email === this.state.user.email){
             
-        //     alert("You can only have one article at a time!!")
-        //     console.log("You can't submit until you delete one of the articles you already have")
-           
-        //   }else{
-            
-        //   }
-        // })
-        // console.log(dbRef);
+            // alert("You can only have one article at a time!!")
+            console.log("You can't submit until you delete one of the articles you already have")
+            this.setState({
+              viewForm:false
+            })
+            console.log("Can User Submit an Article? : " + this.state.viewForm)
 
 
 
+          }else{
+             this.setState({
+               viewForm:true
+             })
+          }
+        return null;
+        }        
+      )
+
+        //... if they haven't then don't do anything.
+        }else{
+          console.log("Not Logged In")
+        }
       })
       
       auth.onAuthStateChanged((user) => {
         if(user){
           this.setState({user});
         }
-      })
-
-      
-
-
-
+      })  
     }
 
     componentWillUnmount(){
       console.log("Unmount on practice-form.js")
-      fire.database().ref("items").off();
-      
+      fire.database().ref("items").off();      
     }
 
     handleChange(e){
@@ -100,51 +116,56 @@ export class PracticeForm extends React.Component{
 
     handleSubmit(e){
 
-
-
-
       console.log("SUBMIT!!!");      
       e.preventDefault();
 
-      console.log("Author is :" + this.state.author)
-      const currentAuthor = this.state.author;
+      // console.log("Author is :" + this.state.author)
+      // const currentAuthor = this.state.author;
       const currentText = this.state.text;
       const currentTitle = this.state.title;
-      const currentUser = this.state.user.email;
+      // const currentUser = this.state.user.email;
+
+      alert ("Can User Submit New Articles? : " + this.state.viewForm)
+      if(currentTitle.length === 0 ||currentText.length  === 0){
+        // console.log("Can't submit")
+        alert("Error!! Title or Text boxes cannot be empty")
+      }else if(this.state.viewForm === false){
+        console.log("Cannot submit. Please remove or edit your existing post.")
+        alert("User cannot have more than 1 article at a time. Please remove or edit your existing post.")
+      }else{
+        console.log("Can submit")
+        const dbRef = fire.database().ref('items');
+        const article = {
+          // User Input here...
+          text:this.state.text,
+          title: this.state.title,
+          
+          // Auto Generated Stuff here...
+          author: this.state.user.displayName,
+          dislikes: 0,
+          email: this.state.user.email,
+          id: (((this.state.articlesArray).length) * 3 ),
+          likes: 0,
+          postdate: "12/12/2012"   
+
+        }
+  
+  
+        const ObjectsInDbCount = (((this.state.articlesArray).length) + 1);
+        dbRef.child(ObjectsInDbCount).set(article);
+  
+  
+        this.setState({
+          author: '',
+          email: '',
+          text: '',
+          title: '',
+          redirectToReferrer: true
+          // id: ''
+        })
 
 
-      // if(currentTitle.length === 0 ||currentText.length  === 0){
-      //   // console.log("Can't submit")
-      //   alert("Error!!")
-      // }else{
-      //   console.log("Can submit")
-      //   const dbRef = fire.database().ref('items');
-      //   const article = {
-      //     // User Input here...
-      //     author: this.state.user.displayName,
-      //     text:this.state.text,
-      //     title: this.state.title,
-  
-      //     // Auto Generated Stuff here...
-      //     id: (((this.state.articlesArray).length) * 3 ),
-      //     postdate: "12/12/2017"
-      //   }
-  
-  
-      //   const ObjectsInDbCount = (((this.state.articlesArray).length) + 1);
-      //   dbRef.child(ObjectsInDbCount).set(article);
-  
-  
-      //   this.setState({
-      //     author: '',
-      //     text: '',
-      //     title: '',
-      //     redirectToReferrer: true
-      //     // id: ''
-      //   })
-
-
-      // } 
+      } 
     }
 
     login(){
@@ -164,11 +185,15 @@ export class PracticeForm extends React.Component{
       })
     }
 
-
-
+    testMethod(e){
+      e.preventDefault()
+      console.log("Test Method")
+    }
+   
     render(){
-      console.log("User is: " + this.state.user)
-
+      // <RedirectOnSubmit 
+      //   redirectToReferrer={this.state.redirectToReferrer} 
+      //   articlesArray={this.state.articlesArray} />
 
       // console.log(this.state.redirectToReferrer)
       const redirectToReferrer = this.state.redirectToReferrer;
@@ -180,113 +205,34 @@ export class PracticeForm extends React.Component{
                 />          
             </Switch>)
       }
-        // const firebaseDB = this.state.articlesArray;
+        
         return(
-          <div className='form'>
-
-          {/* Login */}
+          <FormView 
+            user={this.state.user}
+            // displayName={this.state.user.displayName}
+            // email={this.state.user.email}
+            title={this.state.title}
+            article={this.state.article}
+            handleChange={this.handleChange}
+            onSubmit={this.handleSubmit}
+            login={this.login}
+            logout={this.logout}
           
-          {this.state.user ?
-              <button onClick={this.logout}>Log Out</button>
-              :
-              <button onClick={this.login}>Login</button>
-          }
-
-
-        {/* Logged In View */}
-
-        {
-          this.state.user ?
-
-
-          <div className='uploadArticle'>
-          <h1>Logged in View</h1>
-          <p>{this.state.user.displayName}</p>
-          <h1>Upload</h1>
-
-            <form name="myForm" onSubmit={this.handleSubmit}>
-             {/* <p> 
-                Author: 
-                <input
-                  id="author-input"
-                  type="text"
-                  name="author"
-                  onChange={this.handleChange}
-                  required
-                  value={this.state.author}>
-                </input>
-             </p> */}
-            {/* <p>Author:</p>
-            <input                 
-                form="myForm"
-                type="text"
-                name="author"
-                onChange={this.handleChange}                   
-                required
-                value={this.state.user.email}>
-            </input> */}
-            <p>Author - Auto</p>
-            <p>Dislikes - Auto</p>
-            <p>Id - auto</p>
-            <p>Likes - Auto</p>
-            <p>Postdate - auto</p>
-
-            <p>Title</p>
-              <input                    
-                  form="myForm"
-                  type="text"
-                  name="title"
-                  onChange={this.handleChange}                   
-                  required
-                  value={this.state.title}>
-              </input>
-
-            <p>Text</p>
-              <textarea
-                  form="myForm"
-                  type="text"
-                  name="text"
-                  onChange={this.handleChange}
-                  required
-                  rows="10"
-                  value={this.state.article}
-                >
-              </textarea>
-            
-
-
-
-            
-
-             {/* <p>
-                Id:
-                <input
-                  type="text"
-                  name="id"
-                  onChange={this.handleChange}
-                  required
-                  value={this.state.id}>
-                </input>
-             </p> */}
-
-
-            
-
-
-
-              <button>Upload</button>
-            
-            </form>
-           
-           </div>
-          :
-          <h1>Logged Out View</h1>
-        }
-          
-          
-          </div>
+          />
         )
     }
 }
 
 export default PracticeForm;
+
+// const RedirectOnSubmit = (props) => {
+//   const redirectToReferrer = props.redirectToReferrer;
+//   if (redirectToReferrer === true) {
+//       return (
+//         <Switch>
+//           <Redirect 
+//               to={"/articles/news-page/" + ((props.articlesArray).length) }
+//             />          
+//         </Switch>)
+//   }
+// };
