@@ -21,7 +21,7 @@ import { PracticeForm } from '../myKnews/practice-form';
 
 export class Routes extends React.Component{
     render(){
-        console.log("Log")
+        
         return (
             <div className="body-wrapper">
             <h1>Home</h1>
